[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paandaas"
version = "0.0.3"
description = "My Python package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "MangoJuice" }
]

[tool.setuptools.packages.find]
where = ["src"]
