[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlttk"
version = "0.0.6"
description = "My Python package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "MangoJuice" }
]

[tool.setuptools.packages.find]
where = ["src"]
